fix masonry cards not aligned to center

--- a/src/components/layouts/MasonryLayout.scss
+++ b/src/components/layouts/MasonryLayout.scss
@@ -12,6 +12,7 @@
 .my-masonry-grid_column {
   // padding-left: $standard-spacing; /* gutter size */
   background-clip: padding-box;
+  margin: 0 0.5rem;
 }
 
 // /* Style your items */
